2007-10-24  Brad Taylor  <brad@getcoded.net>

	* resources/procedures.xsl: Make the Strongwind logo a link to
	  Strongwind's project page.

2007-10-24  Brad Taylor  <brad@getcoded.net>
	
	* AUTHORS:
	* resources/procedures.xsl:
	* resources/strongwind.png:
	* resources/strongwind.svg: Add Strongwind's logo, drawn by Andreas
	  Nilsson <andreas@andreasn.se>.

2007-10-24  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/__init__.py:
	import procedurelogger as procedurelogger, not as procedures

	* strongwind/procedurelogger.py:
	* examples/gcalctool/calculatorframe.py:
	updates to reflect procedurelogger => procedures change

	* strongwind/watchdog.py:
	add documentation from the tutorial I'm writing

2007-10-23  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py:
	fix a LookupError that can occur when test scripts exit

	* examples/gcalctool-bug-488226.py:
	add a test for GNOME bugzilla bug #488226

	* examples/gcalctool/calculatorframe.py:
	(CalculatorFrame.changeMode): don't try to guess if the Change Mode
	dialog will appear or not; let the test specify whether or not it's
	expecting the dialog

	* examples/gcalctool-changing-modes.py:
	take advantage of changes in app wrapper

2007-10-22  Jonathan Tai  <jon@tgpsolutions.com>
	
	* strongwind/accessibles.py:
	(PageTab): change the behavior of select() and findPageTab() to be more
	in line with what other classes do
	(Text): remove commented-out __str__() function

	* strongwind/accessibles.py:
	* strongwind/watchdog.py:
	* strongwind/cache.py: 
	replace tabs with 8 spaces in a few spots where tabs snuck in 

	* resources: add a resources folder with sample XSL and CSS for viewing
	XML test results

	* AUTHORS: add an AUTHORS file to give credit to Bailey Kong and Raul
	Jimenez

	* Take over maintainership of Strongwind

2007-10-19  Brad Taylor  <brad@getcoded.net>
	
	* Initial import